--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,30 +1,26 @@
 server:
-  port: 8800
+  port: 9200 #8800
+
+spring:
+  application:
+    name: yanolja-service
+    #  cloud:
+    #    gateway:
+    #      routes:
+    #        - id: yanolja-service
+    #          uri: http://localhost:8080
+    #          predicates:
+    #            - Path=/yanolja/**
+    #          filters:
+    #            - RewritePath=/yanolja/(?<path>.*),/$\{path}
 
 eureka:
   client:
-    register-with-eureka: false #자신을 클라이언트로 등록할지 말지
-    fetch-registry: false #로컬에 캐싱할지말지..client측에서 캐싱할수 있도록 설정
-  server:
-    wait-time-in-ms-when-sync-empty: 5
+    register-with-eureka: true
+    fetch-registry: true
   service-url:
-    defaultZone: http://localhost:8080
+    default-zone: http://localhost:8761/eureka
 
-spring:
-  main:
-    web-application-type: reactive
-  cloud:
-    gateway:
-      routes:
-        - id: yanolja-service
-          uri: http://localhost:8080
-          predicates:
-            - Path=/yanolja/**
-          filters:
-            - RewritePath=/yanolja/(?<path>.*),/$\{path}
 
-logging:
-  level:
-    org.springframework: DEBUG
-    org.springframework.web: DEBUG
+
 
