feat: JWT decoding - JWT generate 기능은 user 정보(로그인 등)을 담당하는 서비스에서 제공해야함 - 테스트를 위해 ApiGatewayApplicationTests에 generateJwt 메서드를 제공

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,4 +10,7 @@ spring:
             - Path=/yanolja/**
           filters:
             - RewritePath=/yanolja/(?<path>.*),/$\{path}
-
+            - JwtAuthentication=ROLE_USER
+jwt:
+  secret: moondysmellwebapplicationsecret
+  expiration-second: 28800
