--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,15 +1,15 @@
 server:
   port: 8800
 
-##유레카 클라이언트 생성
-#eureka:
-#  client:
-#    register-with-eureka: true #유레카 클라이언트 활성화
-#    fetch-registry: true #DefaultZone의 유레카 서버에서 클라리언트 정보를 가져옴(캐싱해놓는다)
-#  service-url:
-#    default-zone: http://localhost:8761/eureka # 유레카 클라이언트로 등록
-#  instance:
-#    prefer-ip-address: true
+#유레카 클라이언트 생성
+eureka:
+  client:
+    register-with-eureka: true #유레카 클라이언트 활성화
+    fetch-registry: true #DefaultZone의 유레카 서버에서 클라리언트 정보를 가져옴(캐싱해놓는다)
+  service-url:
+    default-zone: http://localhost:8761/eureka # 유레카 클라이언트로 등록
+  instance:
+    prefer-ip-address: true
 spring:
   main:
     web-application-type: REACTIVE
